BugFix: 	use java.util.Base64 instead of sun.misc.BASE64Decoder;